--- a/crypto_balance/pubspec.yaml
+++ b/crypto_balance/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  #handle http requests
+  http: ^0.12.0+1
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +42,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - Assets/Logos/
+
+  fonts:
+    - family: Josefin Sans
+      fonts:
+        - asset: Assets/fonts/JosefinSans-Regular.ttf
+          weight: 600
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
