--- a/crypto_balance/pubspec.yaml
+++ b/crypto_balance/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+#icons: following resources here https://flutter.dev/docs/deployment/android
 flutter_icons:
     android: "launcher_icon"
     ios: true
