still not working even with var type change to permission

--- a/crypto_balance/pubspec.yaml
+++ b/crypto_balance/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^0.17.2
   csv: ^4.0.3
   permission: ^0.1.7
+  flutter_plugin_android_lifecycle: ^1.0.4
   #simple_permissions: ^0.1.9
 
   flutter:
