--- a/crypto_balance/pubspec.yaml
+++ b/crypto_balance/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   permission_handler: ^5.0.1+1
   flutter_plugin_android_lifecycle: ^1.0.4
   path_provider: ^1.6.18
+  sqflite: ^1.3.1+1
+
+
 
 
   flutter:
